--- a/frontend/app/shared/components/header/Header.module.css
+++ b/frontend/app/shared/components/header/Header.module.css
@@ -7,7 +7,7 @@
   left: 0;
   right: 0;
 
-  z-index: 1;
+  z-index: 50;
 
   border-bottom: 1px solid rgb(242, 242, 242);
   background-color: rgba(255, 255, 255, 0.75);
